istio/argocd.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: argocd
  namespace: argocd
spec:
  gateways:
  - istio-system/general-gateway
  hosts:
  - 'argocd.sosotech.io'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server
        port:
          number: 80
